<resources>
    <!-- general strings -->
    <string name="app_name">Frequency Calculator</string>

    <!-- <actions> -->
        <string name="action_settings">settings</string>
    <!-- </actions> -->

    <!-- <dialogs> -->
        <string name="dialog_icon_title">Revert icon colors?</string>
        <string name="dialog_icon_message">Changes the app icon color back to the default theme (White Smoke &amp; Grey). Choosing no will result in the current theme being the app icon color.</string>
        <string name="dialog_thankyou_title">Hey there!</string>
        <string name="dialog_thankyou_message">Thanks for using this app for over a week!\nWould you like to give some feedback or suggestions on how to make it even better?</string>
        <string name="dialog_thankyou_fuckoff">No thanks</string>
    <!-- </dialogs -->

    <!-- <preferences> -->
        <string name="pref_cat_about">about</string>
        <string name="pref_about_developer">cytodev</string>
        <string name="pref_about_developer_github">Check me out on GitHub</string>
        <string name="pref_about_license">license</string>
        <string name="pref_about_translations">translations</string>
        <string name="pref_about_translations_help">help translate this app</string>
        <string name="pref_cat_appearance">appearance</string>
        <string name="pref_appearance_theme">theme</string>
        <string-array name="pref_appearance_themes">
            <item>white smoke &amp; grey (default)</item>
            <item>dodger blue &amp; blue Lagoon</item>
            <item>spring bud &amp; olive green</item>
            <item>electric purple &amp; indigo</item>
            <item>orange peel &amp; olive brown</item>
            <item>hollywood cerise &amp; tyrian purple</item>
            <item>spring green &amp; watercourse</item>
        </string-array>
        <string-array name="pref_appearance_themes_values">
            <item>WhiteSmoke</item>
            <item>DodgerBlue</item>
            <item>SpringBud</item>
            <item>ElectricPurple</item>
            <item>OrangePeel</item>
            <item>HollywoodCerise</item>
            <item>SpringGreen</item>
        </string-array>
        <string name="pref_appearance_theme_dark">use dark theme</string>
        <string name="pref_appearance_theme_dark_sum">uses a dark background</string>
        <string name="pref_appearance_icon">themed icon</string>
        <string name="pref_appearance_icon_sum">changes icon color based on theme</string>
        <string name="pref_cat_general">general settings</string>
        <string name="pref_general_decimals">decimal precision</string>
        <string-array name="pref_general_decimals_humanvalues">
            <item>1 decimal</item>
            <item>2 decimals</item>
            <item>3 decimals</item>
            <item>4 decimals</item>
            <item>5 decimals</item>
            <item>6 decimals</item>
            <item>7 decimals</item>
        </string-array>
        <string-array name="pref_general_decimals_values">
            <item>1</item>
            <item>2</item>
            <item>3</item>
            <item>4</item>
            <item>5</item>
            <item>6</item>
            <item>7</item>
        </string-array>
        <string name="pref_general_average">average bpm tap</string>
        <string name="pref_general_average_sum">calculates the bpm based on an average taps</string>
        <string name="pref_general_averagenum">number of taps to take as average</string>
        <string-array name="pref_general_averagenum_humanvalues">
            <item>4 taps</item>
            <item>8 taps</item>
            <item>16 taps</item>
            <item>32 taps</item>
            <item>unlimited</item>
        </string-array>
        <string-array name="pref_general_averagenum_values">
            <item>4</item>
            <item>8</item>
            <item>16</item>
            <item>32</item>
            <item>-1</item>
        </string-array>
        <string name="pref_general_averagenum_unlimitedHelp">long press tap button to clear average</string>
        <string name="pref_cat_interface">interface</string>
        <string name="pref_interface_beats">show beats</string>
        <string name="pref_interface_beats_sum">shows second/minute/hour input</string>
        <string name="pref_interface_time">show time</string>
        <string name="pref_interface_time_sum">shows millisecond/second/minute input</string>
        <string name="pref_interface_tap">show beat tap</string>
        <string name="pref_interface_tap_sum">shows the tap button</string>
    <!-- </preferences> -->

    <!-- <placeholders> -->
        <string name="placeholder_icon">icon</string>
        <string name="placeholder_string">string</string>
    <!-- </placeholders> -->

    <!-- <calculator-strings> -->
        <string name="freq_hertz">hertz</string>
        <string name="freq_beats">beats:</string>
        <string name="freq_beatsPerHour">beats per hour</string>
        <string name="freq_beatsPerMinute">beats per minute</string>
        <string name="freq_beatsPerSecond">beats per second</string>
        <string name="freq_time">time:</string>
        <string name="freq_timeMilis">milliseconds</string>
        <string name="freq_timeSeconds">seconds</string>
        <string name="freq_timeMinutes">minutes</string>
        <string name="freq_tap">tap the bpm:</string>
        <string name="freq_input_tap">TAP</string>
        <string name="freq_input_tap_cleared">cleared bpm average.</string>
    <!-- </calculator-strings> -->

</resources>
