<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="pref_appearance_theme"
        android:title="@string/pref_appearance_theme"
        android:entries="@array/pref_appearance_themes"
        android:entryValues="@array/pref_appearance_themes_values"
        android:summary="%s"
        android:defaultValue="WhiteSmoke"/>

    <CheckBoxPreference
        android:key="pref_appearance_theme_dark"
        android:title="@string/pref_appearance_theme_dark"
        android:summary="@string/pref_appearance_theme_dark_sum"
        android:defaultValue="false"/>

    <CheckBoxPreference
        android:key="pref_appearance_icon"
        android:title="@string/pref_appearance_icon"
        android:summary="@string/pref_appearance_icon_sum"
        android:defaultValue="false"/>

</PreferenceScreen>
