<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LayoutTime"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/freq_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/freq_time"
        android:textSize="14sp"
        android:textStyle="bold"
        style="?android:listSeparatorTextViewStyle" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/freq_input_timeMilis"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:importantForAutofill="no"
            android:hint="@string/freq_timeMilis" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/freq_timeMilis"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/freq_timeMilis" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/freq_timeMilis_warning"
            android:src="@drawable/ic_warning"
            android:contentDescription="@string/freq_precision_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:visibility="invisible" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/freq_input_timeSeconds"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:importantForAutofill="no"
            android:hint="@string/freq_timeSeconds" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/freq_timeSeconds"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/freq_timeSeconds"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/freq_timeSeconds_warning"
            android:src="@drawable/ic_warning"
            android:contentDescription="@string/freq_precision_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:visibility="invisible" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/freq_input_timeMinutes"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:importantForAutofill="no"
            android:hint="@string/freq_timeMinutes" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/freq_timeMinutes"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/freq_timeMinutes" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/freq_timeMinutes_warning"
            android:src="@drawable/ic_warning"
            android:contentDescription="@string/freq_precision_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:visibility="invisible" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
